fix : исправление ошибок